camo-derive/tests/cases/enum_multiple_unnamed_fields.stderr
error: `camo` does not support multiple unnamed fields in enums
 --> tests/cases/enum_multiple_unnamed_fields.rs:5:8
  |
5 |     One(i32, i32),
  |        ^^^^^^^^^^
