camo-derive/tests/cases/enum_multiple_unnamed_fields.rs
use camo_derive::Camo;

#[derive(Camo)]
enum Foo {
    One(i32, i32),
}

fn main() {}
